Banner border gap correction

--- a/styles/banner.scss
+++ b/styles/banner.scss
@@ -19,7 +19,7 @@
 
     top: unset !important;
     right: unset !important;
-    bottom: -1px !important;
+    bottom: -2px !important;
     left: 0 !important;
 
     height: auto !important;
